# Linuwu-Sense-GUI

./: README.md  package-lock.json  package.json  tsconfig.json
src-tauri/: Cargo.toml  logs.txt  tauri.conf.json
src-tauri/src/: command.rs  main.rs  utils.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/dashboard/backlight-timeout/: page.tsx
src/app/dashboard/battery-calibration/: page.tsx
src/app/dashboard/battery-limiter/: page.tsx
src/app/dashboard/boot-animation-sound/: page.tsx
src/app/dashboard/fan/: page.tsx
src/app/dashboard/keyboard/: page.tsx
src/app/dashboard/lcd-override/: page.tsx
src/app/dashboard/usb-charging/: page.tsx
src/components/: app-sidebar.tsx  nav-user.tsx
